tests/error/netestovane/getchar_index.src
.IPPcode18
defvar GF@a
defvar GF@b
move GF@a string@abc
getchar GF@b GF@a int@-1